make debug endpoint a thing that is better

--- a/web/templates/debug.html
+++ b/web/templates/debug.html
@@ -13,6 +13,18 @@
           <dl>
             <dt>handle</dt>
             <dd>{{.Handle}}</dd>
+
+            <dt>name</dt>
+            <dd>{{.Name}}</dd>
+
+            <dt>pipeline</dt>
+            <dd>{{.PipelineName}}</dd>
+
+            <dt>type</dt>
+            <dd>{{.Type}}</dd>
+
+            <dt>expires at</dt>
+            <dd>{{.ExpiresAt}}</dd>
           </dl>
         {{end}}
       </ul>
