--- a/web/templates/build.html
+++ b/web/templates/build.html
@@ -31,7 +31,7 @@
   <div id="build-requires-auth">
     <form method="get" action="{{url "LogIn"}}">
       <input type="submit" value="log in to view" />
-      <input type="hidden" name="redirect-to" value="{{url "GetBuild" .Job .Build}}" />
+      <input type="hidden" name="redirect" value="{{url "GetBuild" .Job .Build}}" />
     </form>
   </div>
   <div id="build-logs"></div>
