--- a/web/assets/css/buttons.less
+++ b/web/assets/css/buttons.less
@@ -1,18 +1,22 @@
 @import (reference) "_vars.less";
 
 .btn-power-toggle {
-    font-size: 16px;
-    width: 25px;
-    line-height: 25px;
-    text-align: center;
+  font-size: 16px;
+  width: 25px;
+  line-height: 25px;
+  text-align: center;
 
-    .enabled & {
-      color: @base07;
-      background: @base0B;
-    }
+  .enabled & {
+    color: @base07;
+    background: @base0B;
+  }
 
-    .disabled & {
-    }
+  .errored & {
+    background: @base09;
+  }
+
+  .disabled & {
+  }
 }
 
 .btn-hamburger {
