add link in /login to force basic auth if enabled
[#105045438]

--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -1,10 +1,16 @@
 {{define "title"}}Log In - Concourse{{end}}
 
 {{define "body"}}
+{{$redirect := .Redirect}}
 <div class="login-box">
-  {{$redirect := .Redirect}}
-  {{range $name, $provider := .Providers}}
-  <a href="{{url "OAuthBegin" $name $redirect}}">Log in with {{$provider.DisplayName}}</a>
-  {{end}}
+  <ul class="options">
+    {{if .BasicAuthEnabled}}
+    <li><a href="{{url "BasicAuth" $redirect}}">Log in with Basic Auth</a></li>
+    {{end}}
+
+    {{range $name, $provider := .Providers}}
+    <li><a href="{{url "OAuthBegin" $name $redirect}}">Log in with {{$provider.DisplayName}}</a></li>
+    {{end}}
+  </ul>
 </div>
 {{end}}
