add super basic styling to login page

--- a/web/assets/css/main.less
+++ b/web/assets/css/main.less
@@ -8,13 +8,12 @@
 @import "layout.less";
 @import "colors.less";
 
-
 @import "buttons.less";
 @import "modules.less";
-
 
 @import "legacy.less";
 @import "utils.less";
 
-
 @import "pipeline_nav.less";
+
+@import "login.less";
