--- a/web/assets/css/colors.less
+++ b/web/assets/css/colors.less
@@ -1,6 +1,5 @@
 @import (reference) "_vars.less";
 
-#build-requires-auth input { background: @base01; }
 .steps .nest.even { background: @base01; }
 
 #builds { background: @base00; }
@@ -52,11 +51,9 @@
 span.error { color: @base08; }
 .resource-check-status pre { color: @base08; }
 
-#build-requires-auth input:hover { background: @base04; }
 #page-header.failed { background: @base08; }
 
 .build-step .header .version { color: @base06; }
-#build-requires-auth input { color: @base06; }
 
 .build-header .build-times { color: @base07; }
 .resource-header h1 { color: @base07; }
@@ -156,3 +153,6 @@ span.error { color: @base08; }
 .build-action.btn-pause i {
   font-size: 23px;
 }
+
+#build-requires-auth input { background: @base01; color: @base06; }
+#build-requires-auth input:hover { background: @base04; }
