update intro dialog to say `fly set-config`
[#105727578]

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -26,13 +26,12 @@
     <div class="display-in-middle">
         <div class="h1">no pipelines configured</div>
         <h3>first, download the CLI tools:</h3>
-          <ul id="cli-downloads">
-            <li><a href="{{url "DownloadCLI" "darwin" "amd64"}}"><i class="fa fa-apple"></i></a></li>
-            <li><a href="{{url "DownloadCLI" "windows" "amd64"}}"><i class="fa fa-windows"></i></a></li>
-            <li><a href="{{url "DownloadCLI" "linux" "amd64"}}"><i class="fa fa-linux"></i></a></li>
-          </ul>
-        <h3>then, use `<a class="ansi-blue-fg" target="_blank" href="http://concourse.ci/fly-cli.html#fly-configure">fly configure</a>` to setup your new pipeline</h3>
-
+        <ul id="cli-downloads">
+          <li><a href="{{url "DownloadCLI" "darwin" "amd64"}}"><i class="fa fa-apple"></i></a></li>
+          <li><a href="{{url "DownloadCLI" "windows" "amd64"}}"><i class="fa fa-windows"></i></a></li>
+          <li><a href="{{url "DownloadCLI" "linux" "amd64"}}"><i class="fa fa-linux"></i></a></li>
+        </ul>
+        <h3>then, use `<a class="ansi-blue-fg" target="_blank" href="http://concourse.ci/fly-cli.html#fly-set-config">fly set-config</a>` to set up your new pipeline</h3>
     </div>
   </body>
 </html>
