--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -31,7 +31,7 @@
           <li><a href="{{url "DownloadCLI" "windows" "amd64"}}"><i class="fa fa-windows"></i></a></li>
           <li><a href="{{url "DownloadCLI" "linux" "amd64"}}"><i class="fa fa-linux"></i></a></li>
         </ul>
-        <h3>then, use `<a class="ansi-blue-fg" target="_blank" href="http://concourse.ci/fly-cli.html#fly-set-config">fly set-config</a>` to set up your new pipeline</h3>
+        <h3>then, use `<a class="ansi-blue-fg" target="_blank" href="http://concourse.ci/fly-cli.html#fly-set-pipeline">fly set-pipeline</a>` to set up your new pipeline</h3>
     </div>
   </body>
 </html>
