succeeded steps collapse and can be toggled

--- a/web/assets/css/legacy.less
+++ b/web/assets/css/legacy.less
@@ -193,6 +193,10 @@ span.error {
   font-weight: bold;
 }
 
+.step-collapsed {
+  display: none;
+}
+
 .step-body {
   padding: 0 10px;
 }
@@ -200,7 +204,6 @@ span.error {
 .step-body pre {
   margin: 10px 0 0;
 }
-
 
 .steps {
   padding: 10px;
