generate a minified version of the elm code
* add this to the Makefile

--- a/web/templates/elm-build.html
+++ b/web/templates/elm-build.html
@@ -31,7 +31,7 @@
   <div id="elm-app"></div>
 </div>
 
-<script src="{{asset "elm.js"}}"></script>
+<script src="{{asset "elm.min.js"}}"></script>
 
 <script type="text/javascript">
 Elm.embed(Elm.Main, document.getElementById("elm-app"), {buildId: {{.Build.ID}}});
