fix up a few oddities in step rendering CSS
also fix font-awesome embedding; needs .less file extension for it to be
inlined

--- a/web/assets/css/legacy.less
+++ b/web/assets/css/legacy.less
@@ -198,11 +198,11 @@ span.error {
 }
 
 .step-body {
-  padding: 0 10px;
+  padding: 10px;
 }
 
 .step-body pre {
-  margin: 10px 0 0;
+  margin: 0;
 }
 
 .steps {
@@ -213,21 +213,12 @@ span.error {
   clear: both;
 }
 
-.steps .seq > .build-source:last {
-  padding-bottom: 0;
-}
-
-.seq, .steps .nest {
+.seq {
   margin-bottom: 10px;
 }
 
-.steps .seq:last-child, .steps .nest:last-child {
+.steps .seq:last-child {
   margin-bottom: 0;
-}
-
-.steps .nest {
-  padding: 10px;
-  clear: both;
 }
 
 .build-step .header {
