--- a/web/assets/css/main.less
+++ b/web/assets/css/main.less
@@ -1,5 +1,4 @@
-
-@import "lib/font-awesome.min.css";
+@import "lib/font-awesome.min.css.less";
 
 @import "globals.less";
 @import "typography.less";
