make inactive steps 50% gone
[#97774988]

Signed-off-by: Liz Dahlstrom <edahlstrom@pivotal.io>

--- a/web/assets/css/legacy.less
+++ b/web/assets/css/legacy.less
@@ -221,6 +221,10 @@ span.error {
   margin-bottom: 0;
 }
 
+.build-step.inactive {
+  opacity: 0.5;
+}
+
 .build-step .header {
   cursor: pointer;
   clear: both;
