show login button if event source request rejected
[#97774988]

Signed-off-by: Alex Suraci <asuraci@pivotal.io>

--- a/web/assets/css/colors.less
+++ b/web/assets/css/colors.less
@@ -144,5 +144,5 @@ span.error { color: @base08; }
   font-size: 23px;
 }
 
-#build-requires-auth input { background: @base01; color: @base06; }
-#build-requires-auth input:hover { background: @base04; }
+.build-login input { background: @base01; color: @base06; }
+.build-login input:hover { background: @base04; }
