--- a/web/assets/css/legacy.less
+++ b/web/assets/css/legacy.less
@@ -176,7 +176,7 @@
   display: none; /* gets toggled by failed websocket connection */
 }
 
-#build-requires-auth input {
+.build-login input {
   width: 100%;
   padding: 0 10px;
   text-decoration: none;
