--- a/web/templates/build.html
+++ b/web/templates/build.html
@@ -3,6 +3,8 @@
 {{define "body"}}
 <div id="elm-app"></div>
 
+<script src="{{asset "jquery-2.1.1.min.js"}}"></script>
+<script src="{{asset "concourse.js"}}"></script>
 <script src="{{asset "elm.min.js"}}"></script>
 <script type="text/javascript">
 Elm.embed(Elm.Main, document.getElementById("elm-app"), {buildId: {{.Build.ID}}});
