add builds link to no-pipelines configured page
[#96307566]

Signed-off-by: Toby Rumans <trumans@pivotal.io>

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -23,6 +23,11 @@
     <meta name="theme-color" content="#000000">
   </head>
   <body>
+    <div>
+      <ul class="nav-right">
+        <li class="nav-item"><a href="/builds"><i class="fa fa-tasks"></i></a></li>
+      </ul>
+    </div>
     <div class="display-in-middle">
         <div class="h1">no pipelines configured</div>
         <h3>first, download the CLI tools:</h3>
