--- a/web/assets/css/legacy.less
+++ b/web/assets/css/legacy.less
@@ -221,8 +221,8 @@ span.error {
   margin-bottom: 0;
 }
 
-.build-step.inactive h3, .build-step.inactive i {
-  color: @base03;
+.build-step.inactive h3, .build-step.inactive i, .build-step.inactive .version {
+  color: @base04;
 }
 
 .build-step .header {
