tweak colors more
Signed-off-by: Chris Brown <cbrown@pivotal.io>

--- a/web/assets/css/colors.less
+++ b/web/assets/css/colors.less
@@ -15,7 +15,7 @@
   }
 }
 
-.build-step.first-occurrence .header { background: @base03; color: @base05; }
+.build-step.first-occurrence .header { background: @base03; }
 .groups li.active a { background: @base03; }
 
 .legend dt.pending { background: @base04; }
